[windows] Fix Leaks in perfMemory_windows.cpp

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b109
    • windows

      Code reviews revealed leaks in perfMemory_windows.cpp (C-heap and directory handles).

      - directory handle leaks in cleanup_sharedmem_resources()

      - luser C-heap leak in open_file_mapping()


      Note that these leaks are already fixed for Posix platforms.

            Assignee:
            Thomas Stuefe
            Reporter:
            Thomas Stuefe
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: