8150379: [windows] Fix Leaks in perfMemory_windows.cpp

Reviewed-by: clanger, dholmes, gthornbr